@@ -1,4 +1,5 @@
 import java.util.Random;
+import java.lang.*;
 
 import sharedbathroom.SharedBathroom;
 
@@ -53,7 +54,7 @@ public class Threads extends Thread {
 
     public void womanQueue(SharedBathroom bathroom) {
 
-        System.out.println("Woman: " + Thread.currentThread().threadId() + " in queue");
+        System.out.println("Woman: " + Thread.currentThread().getId() + " in queue");
         bathroom.womanEnter();
         threadSleep(maxSleepBathroom);
         bathroom.womenExit();
